Major updates to pages describing the 6 steps

--- a/analyze.html
+++ b/analyze.html
@@ -139,7 +139,7 @@ window.onload = function (evt) {
 <body>
 <h1>Step 4: Analyze (Assess Outcomes)</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-The "Analyze" step involves assessing outcomes by modeling how change in ecosystems and social and economic conditions under alternative future scenarios leads to change in environmental benefits and values for people. Results can be spatially explicit and, when possible, should be directly tied to local beneficiaries (i.e., demand for those benefits) and reported using metrics that will resonate with stakeholders and policy-makers.
+The "Analyze" step involves assessing ecosystem service outcomes by modeling how change in ecosystems and socio-economic conditions under alternative future scenarios leads to change in environmental benefits and values for people. Results can be spatially explicit and, when possible, should be directly tied to local beneficiaries (i.e., demand for those benefits) and reported using metrics that will resonate with stakeholders and policy-makers.
 <p></p>
 <img src="img/approach_Step4.png" usemap="#step4"><br>
 <map name="step4">
@@ -152,8 +152,8 @@ The "Analyze" step involves assessing outcomes by modeling how change in ecosyst
 <a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
-<li>Produce early outputs such as maps or summary tables to characterize the current distribution of ecosystem services</li>
-<li>Through a stakeholder-driven process, assess ES outcomes under plausible alternative future scenarios</li>
+<li>Produce early outputs such as maps or summary tables to characterize the current distribution of ecosystem services (ES)</li>
+<li>Using a stakeholder-driven process to compile data and develop scenarios, assess and compare future ES outcomes</li>
 </ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
@@ -164,11 +164,11 @@ The "Analyze" step involves assessing outcomes by modeling how change in ecosyst
 </ul>
 <a name="tools"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;MSP Decision-Support Tools and Use-Cases</h2>
-Below we list some freely-available MSP analysis toolkits. Click on the tool's name to visit its website or click on the sub-bullet links to learn specifically how they were applied through an MSP use-case.
+Below we list some freely-available MSP analysis toolkits. Click on the tool's name to visit its website or click on the sub-bullet links to learn how the tool was applied as part of an MSP use-case.
 <p></p>
 <ol>
 <li><a href="http://www.ariesonline.org" target="_blank"><b>AIRES</b></a>
-<br>&#8226; <a href="http://www.ariesonline.org/case_studies/madagascar.html" target="_blank">Madagascar</a> - ARIES marine ecosystem services models also developed for Madagascar, focusing on coastal storm regulation and subsistence fisheries. Both of these services are critical for Madagascar, due to its reliance on fisheries for protein and its susceptibility to tropical storms forming in the southwest Indian Ocean.
+<br>&#8226; <a href="http://www.ariesonline.org/case_studies/madagascar.html" target="_blank">Madagascar</a> - ARIES marine ecosystem services models were developed for Madagascar to study coastal storm regulation and subsistence fisheries. Both of these services are critical in Madagascar due to its reliance on fisheries for protein and its susceptibility to tropical storms forming in the southwest Indian Ocean.
 <li><a href="http://atlantis.cmar.csiro.au" target="_blank"><b>Atlantis</b></a>
 <br>&#8226; <a href="http://www.noaa.gov/iea/Assets/iea/documents/atlantis_ecosystem_model.pdf" target="_blank">Northern Gulf of California (Mexico)</a> - Atlantis was used to estimate the benefits of compliance with existing fisheries regulations in the Northern Gulf of California, including spatial management, seasonal closures, gear restrictions, removal of illegal fishing, buyouts and programs to encourage gear switching, and the combination of these regulations into ‘full enforcement’.
 <li><a href="http://maps.coastalresilience.org/network/" target="_blank"><b>Coastal Resilience</b></a>
@@ -177,7 +177,7 @@ Below we list some freely-available MSP analysis toolkits. Click on the tool's n
 <br>&#8226; <a href="https://www.nceas.ucsb.edu/globalmarine/ca_current" target="_blank">California Current</a> - Researchers applied methods developed to map cumulative impacts globally to the California Current using more comprehensive and higher-quality data for 25 human activities and 19 marine ecosystems.
 </ul>
 <li><a href="marine_invest.html"><b>Marine InVEST</b></a>
-<br>&#8226; Select InVEST MSP use-cases are described at the <a href="#use-cases">bottom of this page</a>.
+<br>&#8226; Two InVEST MSP use-cases are described at the <a href="#use-cases">bottom of this page</a>.
 <li><a href="http://www.afordablefutures.com/services/mimes" target="_blank"><b>MIMES</b></a>
 <br>&#8226; <a href="http://www.eartheconomics.org/FileLibrary/file/Reports/Louisiana/Earth_Economics_Report_on_the_Mississippi_River_Delta_compressed.pdf" target="_blank">Mississippi Delta</a> - Wetlands, Hurricanes and the Economy: The Value of Restoring the Mississippi River Delta
 <li><a href="http://www.wri.org/our-work/project/coastal-capital-economic-valuation-coastal-ecosystems-caribbean/coastal-capital#project-tabs" target="_blank"><b>WRI’s Valuation Methods and Tools</b></a>
@@ -191,14 +191,14 @@ Below we list some freely-available MSP analysis toolkits. Click on the tool's n
 <b>Q: What guidance is available to help me choose from all the different decision-support tools for MSP?</b><br>
 <i>A: In 2012 the Center for Ocean Solutions and PacMARA released a <a href="http://pacmara.org/tikiwiki/tiki-download_file.php?fileId=233" target="_blank"><b>Decision Guide: Selecting decision support tools for marine spatial planning</b></i></a>
 <p></p>
-<b>Q: What metrics are most effective in tying ecosystem function/structure to people's values?</b><br>
+<b>Q: Which metrics are most effective for highlighting future change in the distribution and delivery of ecosystem services to people?</b><br>
 <i>A: It depends largely on what ecosystem service and function are under consideration.  Stakeholder engagement can elucidate the source(s) of environmental change, how these changes affect ecosystem function, and what ecological outputs will change.  Once these connections become clear, it can then be useful to talk about metrics like economic valuation.  This process of working from change, through function, and then to ecological outcomes to people is typically more important than any final measures of ecosystem services or value.</i>
 <p></p>
-<b>Q: How exactly can InVEST models be applied to facilitate the MSP process?</b><br>
+<b>Q: How exactly can InVEST models be used to facilitate the MSP process?</b><br>
 <i>A: Visit our <a href="marine_invest.html"><b>Marine InVEST page</b></a> to learn about the models -or- read through the NatCap use-case summaries at the bottom of this and subsequent pages to learn how different models in the InVEST toolkit were applied for MSP.</i>
 <p></p>
 <b>Q: If I have questions about using InVEST models or run into problems, where can I get help?</b><br>
-<i>A: First, check the <a href="http://data.naturalcapitalandresilienceplatform.org/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST user’s guide</b></a> chapter dedicated to your model of interest.  Each chapter covers the theory behind the model as well as detailed information about data formatting requirements and how to interpret the results (model outputs).  Each model's sample input data offers an example of how input data should be formatted.  Secondly, the <a href="http://ncp-yamato.stanford.edu/natcapforums/" target="_blank"><b>NatCap User Help Forum</b></a> enables users to post questions.  The forum is also a great way to interact with other InVEST users and NatCap staff.</i>    
+<i>A: First, check the <a href="http://data.naturalcapitalandresilienceplatform.org/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST user’s guide</b></a> chapter that describes your particular model of interest.  Each chapter covers the theory behind the model as well as detailed information about data formatting requirements and how to interpret the results (model outputs).  Within InVEST, each model includes sample input data that offers a template for how input data should be formatted.  Also, the <a href="http://ncp-yamato.stanford.edu/natcapforums/" target="_blank"><b>NatCap User Help Forum</b></a> allows users to converse with other InVEST users and NatCap staff.</i>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
@@ -217,13 +217,13 @@ Below we list some freely-available MSP analysis toolkits. Click on the tool's n
 Use the expand [+] button to learn more about this analyze step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
 <h4>California</h4>
-Early on, the <a href="marine_invest.html"><b>InVEST coastal vulnerability model</b></a> was used to highlight the role that habitats play in reducing coastal exposure to people and property from storm-induced erosion and flooding.  These areas were further analyzed at the county-level to identify locations most suitable for various activities and conservation.  This information provides local agencies with a process to better determine how their coasts and oceans can be sustainably used and protected.  Based on the different metrics being requested by northern California stakeholders, additional InVEST models are being applied to map the various co-benefits provided by healthy coastal-marine ecosystems, including recreation, scenic quality and watershed services.
+The <a href="marine_invest.html"><b>InVEST coastal vulnerability model</b></a> was used to identify where coastal ecosystems reduce the number of people exposed to storms and future sea level rise along the California coast.  These areas were further analyzed at the county level to highlight which habitats play the biggest role in reducing numbers of people at risk and thus where to prioritize conservation of these ecosystems.  This early information provided local agencies with a process to better determine how their coasts and oceans can be managed more sustainably.  Additional InVEST models are now being applied to map the full suite of benefits provided by coastal-marine ecosystems, including recreation opportunities, scenic quality and watershed services.
 <p></p>
 <h4>Belize</h4>
-A risk assessment was conducted to map impacts to habitats from eight coastal-marine uses/activities.  Based on the amount of "functional" habitat (healthy ecosystems able to provide benefits to people), three <a href="marine_invest.html"><b>InVEST models</b></a> were applied to map, measure and value future ecosystem services, including coastal protection, fisheries, and tourism / recreation services.  This information was used to inform decisions about how human actions affect ecosystems, the provision of ecosystem services, and the value of those services.
+A risk assessment was conducted in coastal Belize to map impacts to habitats from eight coastal-marine human uses.  Based on the amount of "functional" habitat (healthy ecosystems that are capable of providing benefits to people), three <a href="marine_invest.html"><b>InVEST models</b></a> were applied to map, measure and value future ecosystem service delivery, including coastal protection, fisheries, and tourism / recreation.  Model results were used to illustrate where human activities pose the greatest risk to ecosystems and the resulting changes in ecosystem service values (both biophysical and economic).
 <p></p>
 <ul id="folio_scroller">
-<li><span>Spatial representations of risk to three habitats were used to assess ecosystem service outcomes for the nine coastal planning regions of Belize</span><img alt="" src="img/analyze_bz_folio_1.png" /></a></li>
+<li><span>Spatial representations of risk to three habitats were used to assess ecosystem service outcomes across the nine coastal planning regions of Belize</span><img alt="" src="img/analyze_bz_folio_1.png" /></a></li>
 </ul> 
 <p></p>
 </body>
