--- a/communicate.html
+++ b/communicate.html
@@ -139,7 +139,7 @@ window.onload = function (evt) {
 <body>
 <h1>Step 6: Communicate (Inform Decisions)</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-Once results have been synthesized, it is important to offer targeted communication of this new ecosystem service knowledge to inform decisions. Ecosystem service information can be delivered in many ways, from peer-review papers to reports to diagrams and interactive maps. For this information to be taken up, it should be represented in ways that resonate with the intended audience. We have found that the most effective communication occurs through co-production of knowledge and knowledge products by scientists, policy-makers and stakeholders through an applied process.  
+Once ecosystem service outputs have been synthesized, it may be necessary to develop a communication strategy for disseminating results to your different target audiences.  ES information can be delivered in many ways, from peer-review papers to reports to diagrams and interactive maps.  For this information to be taken up, it should be represented in ways that resonate with the intended audience. We have found that the most effective communication occurs through co-production of knowledge and knowledge products by scientists, policy-makers and stakeholders through an applied process.  
 <p></p>
 <img src="img/approach_Step6.png" usemap="#step6"><br>
 <map name="step6">
@@ -152,16 +152,16 @@ Once results have been synthesized, it is important to offer targeted communicat
 <a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
-<li>Produce reports and other synthesis projects (e.g, executive summary, presentations, online maps, etc.) tailored to intended audience and decision-context</li>
-<li>Create an online repository (e.g., mapping portal, data download) to archive and dissementate key project information</li>
-<li>Organize a workshop or meeting to share final results and conclude the project</li>
+<li>Create synthesis projects (e.g, report, executive summary, presentation, etc.) tailored to intended audience</li>
+<li>Build an online repository (e.g., mapping portal, data download) to archive and dissementate spatial data</li>
+<li>Organize a workshop to share final results and conclude the project</li>
 </ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
 <ul>
-<li>Clearly convey relevant information using appropriate communication mediums (technical report vs. video campaign)</li>
+<li>Use appropriate mediums to communicate findings to different audiences (e.g., technical report for scientists vs. executive summary for government officials)</li>
 <li>Boiling everything down to a number does not always make a policy better or the discussion more scientific</li>
-<li>Be honest about the science and underlying uncertainty, particularly when not everything can be reduced to a single currency or when money is the only unit of value</li>
+<li>Be honest about the science and underlying uncertainty, particularly when not everything can be reduced to a single currency</li>
 </ul>
 <a name="gallery"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/gallery_sm.png" align="left"><h2>&nbsp;&nbsp;Gallery</h2>
@@ -169,17 +169,14 @@ Visit our <a href="gallery.html"><b>Visualization Gallery</b></a> to explore exa
 <p></p>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
-<b>Q: Do decision-makers always want ecosystem service valuation?</b><br>
-<i>A: No.  It's not always about the money.  Other metrics including livelihoods (e.g., jobs) and ecological outcomes (biophysical units) can be just as valuable to decision-makers.</i><br>
-<p></p>
 <b>Q: What kind of information do decision-makers want to hear?</b><br>
-<i>A: Explain what they are losing, how it will affect them, and what they are gaining from some management action/ intervention. This means explaining how environmental or ecological change will affect them on both sides of the equation.</i><br>
+<i>A: Explain what they are losing, how it will affect them, and what they are gaining from some development or management action. This means explaining how environmental or ecological change will affect them on both sides of the equation.</i><br>
 <p></p>
-<b>Q: What is the <u>best</u> way to present results?</b><br>
-<i>A: Results are often best displayed in multiple formats to accomodate different audiences and communication mediums.  Because of the spatial nature of MSP, maps can serve as an important component of communicating results.  Diagrams can be useful for visualizing trade-offs among services under different scenarios.  Presentations offer an opportunity to foster conversation, while written reports are often used to catalog the relevant literature, data sources, model methodology, and results.</i><br>
+<b>Q: How should I present results?</b><br>
+<i>A: Results can be communicated using different mediums and formats.  Because the process of MSP relies on spatial information, maps are an obvious choice for communicating results, especially differences in space.  Simple diagrams using arrows, bars, or graphs can help visualize ecosystem service synergies and trade-offs across scenarios.  Meeting presentations offer an opportunity to foster conversation, while written reports are often used to catalog the relevant literature, data sources, model methodology, and results.</i><br>
 <p></p>
 <b>Q: What comes next?</b><br>
-<i>A: After communicating with partners and stakeholders, you may iterate the planning process.  This can include expanding the project’s objectives, improving data inputs, or modifying scenarios.  If your project is concluding, applying results through implementation or developing a monitoring program can serve as a lasting contribution to the study area and local community members.</i><br>
+<i>A: After communicating with partners and stakeholders, you may revisit previous steps in the process.  This may include expanding the project’s objectives, improving data inputs, or modifying scenarios.  If your project is concluding, applying results through implementation or developing a monitoring protocol can serve as a lasting contribution to the local community.</i><br>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
@@ -195,19 +192,19 @@ Visit our <a href="gallery.html"><b>Visualization Gallery</b></a> to explore exa
 Use the expand [+] button to learn more about this communicate step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
 <h4>Belize</h4>
-Communicating and applying project results in Belize was multi-faceted, including a formal planning document, executive summary, peer-reviewed publications and online maps, videos and brochures.  All synthesis products and communication materials were tailored to specific audiences and decision-makers.
+Communicating and applying results in Belize was multi-faceted, including a formal planning document, executive summary, peer-reviewed publications and online maps, videos and brochures.  All synthesis products and communication materials were tailored to specific audiences and decision-makers.
 <p></p><br><br>
 <ul id="folio_scroller">
-<li><span>The Belize Integrated Coastal Zone Management Plan offers a legal framework for implementing a spatial zoning plan to ensure a sustainable future for Belize's coasts and oceans supported by thriving local communities and a vibrant economy.</span><img alt="" src="img/communicate_bz_folio_1.png" /></a></li>
-<li><span>Peer-reviewed publications can serve to disseminate results and build credibility within the scientific community.</span><img alt="" src="img/communicate_bz_folio_4.png" /></a></li>
-<li><span>Online analytical tools provide simple, targeted information to planners, reserve managers, and other decision-makers without the need for a desktop GIS or technical expertise.</span><img alt="" src="img/communicate_bz_folio_3.png" /></a></li>
-<li><span>Online portals allow readers to explore results and recommendations of the Plan in detail.</span><img alt="" src="img/communicate_bz_folio_2.png" /></a></li>
+<li><span>The Belize Integrated Coastal Zone Management Plan (ICZMP) offers a legal framework for implementing a spatial zoning plan to ensure a sustainable future for Belize's coasts and oceans supported by thriving local communities and a vibrant economy.</span><img alt="" src="img/communicate_bz_folio_1.png" /></a></li>
+<li><span>Peer-reviewed publications can build credibility within the scientific community.</span><img alt="" src="img/communicate_bz_folio_4.png" /></a></li>
+<li><span>Online analytical tools provided clear, targeted information to planners, reserve managers, and other decision-makers in Belize without requiring technical expertise.</span><img alt="" src="img/communicate_bz_folio_3.png" /></a></li>
+<li><span>This online mapping portal enabled citizens of Belize to explore zoning recommendations in greater detail than the static maps included within the ICZM plan.</span><img alt="" src="img/communicate_bz_folio_2.png" /></a></li>
 </ul> 
 <p></p><br><br><br>
 <h4>California</h4>
 <p></p>
 <ul id="folio_scroller">
-<li><span>This one-page interim report is an example of how our partner, Center for Ocean Solutions, communicated results to coastal agencies working in Sonoma County.</span><img alt="" src="img/communicate_ca_folio_1.png" /></a></li>
+<li><span>This one-page interim report is one example of how our partner, the Center for Ocean Solutions, communicated early findings to stakeholders in Sonoma County, California.</span><img alt="" src="img/communicate_ca_folio_1.png" /></a></li>
 </ul> 
 <p></p>
 </body>
