--- a/data.html
+++ b/data.html
@@ -141,7 +141,7 @@ window.onload = function (evt) {
 <body>
 <h1>Step 2: Data (Compile Information)</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-Since MSP is often multidisciplinary in nature, there can be substantial spatial and non-spatial data requirements. For coastal and marine spatial planning, common data requirements include biophysical and oceanographic information, such as elevation, maps of human activities and socioeconomic characteristics in the coastal zone, and data on the distribution and quality of coastal and marine habitats. When valuation is a part of the assessment, economic data is also needed, which can include market prices, property values, and discount rates. An ecosystem service approach to MSP can help to focus on the specific data requirements to minimize conflicts and maximizing the benefits people obtain from healthy ecosystems.
+MSP typically relies on both spatial and non-spatial data characterizing the coastal and marine space. Data requirements may include biophysical and oceanographic information, such as elevation, maps of human activities and socio-economic characteristics in the coastal zone, and data on the distribution and quality of coastal-marine habitats. When valuation is a part of the assessment, economic data is also needed, which can include market prices, property values, and discount rates.
 <p></p>
 <img src="img/approach_Step2.png" usemap="#step2"><br>
 <map name="step2">
@@ -156,15 +156,15 @@ Since MSP is often multidisciplinary in nature, there can be substantial spatial
 <ul>
 <li>Gather coarse spatial information that can be refined and improved through iterative analysis and knowledge exchange</li>
 <li>Compile and curate a "working" database to use as inputs to MSP decision-support tools</li>
-<li>Finalize a shareble database at the conclusion of the project</li>
+<li>Develop a comprehensive MSP database to share with the community at the conclusion of the project</li>
 </ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
 <ul>
 <li>Don’t spend too much time initially on this step</li>
 <li>Use global or regional data sources to get a 'lay of the land' and identify data gaps/needs</li>
-<li>Show preliminary datasets to stakeholders; use expert feedback to refine information (see <a href="iterate.html"><b>Iterate</b></a> step)</li>
-<li>If funding permits, consider adding a dedicated GIS/data analyst to your team</li>
+<li>Show preliminary data to stakeholders; use expert feedback to refine information (see <a href="iterate.html"><b>Iterate</b></a> step)</li>
+<li>If funding allows, consider adding a dedicated GIS/data analyst to your team</li>
 </ul>
 <a name="databases"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/databases_sm.png" align="left"><h2>&nbsp;&nbsp;Global Databases</h2>
@@ -191,7 +191,7 @@ We organize global MSP datasets into the following thematic categories. Click on
 <div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/databases_sm.png" align="left"><h2>&nbsp;&nbsp;Regional Databases</h2>
 Hover over each marker to learn more about these regional MSP databases.  Click on the marker to visit each website.<br>
-<i>Do you know of other regional/local databases that can inform MSP?  <a href="mailto:gverutes@stanford.edu?Subject=Regional%20MSP%20Database" target="_top">E-mail us</a> the details!</i>
+<i>Do you know of other regional/local MSP databases?  <a href="mailto:gverutes@stanford.edu?Subject=Regional%20MSP%20Database" target="_top">E-mail us</a> the details!</i>
 <p></p>
 <ul id="folio_scroller">
 <li><span>Regional MSP Databases</span><iframe width='600px' height='300px' frameBorder='0' src='reg_msp_data.html'></iframe></li>
@@ -200,24 +200,24 @@ Hover over each marker to learn more about these regional MSP databases.  Click 
 <a name="tools"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;Helper Tools</h2>
 <img src="img/on_ramp.png"><br>
-Pre-processing spatial and tabular data is a challenging but necessary step before these information can be plugged into InVEST or other decision-support tools.  NatCap has created helper tools and documentation (or "on-ramps") to help InVEST users more easily prepare and format inputs for different models:
+Processing spatial and tabular data is a challenging but necessary step before it can be plugged into InVEST or other decision-support tools.  NatCap has created helper tools and documentation (or "on-ramps") to help InVEST users prepare and format inputs for analyzing ecosystem service outcomes:
 <ol>
 <li><a href="http://naturalcapitalproject.org/pubs/InVEST_DataRequirements_June2014.xlsx" target="_blank"><b>InVEST 3.x Data Requirements</b></a> - A sortable spreadsheet listing the required and optional inputs for each InVEST model</li>
-<li><a href="http://ncp-dev.stanford.edu/~dataportal/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST 3.1.0 User's Guide</b></a> - Every chapter includes a "Data Needs" section outlining input and formatting requirements for each model</li>
+<li><a href="http://ncp-dev.stanford.edu/~dataportal/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST 3.1.0 User's Guide</b></a> - Each chapter includes a "Data Needs" section that outlines input and formatting requirements for InVEST models</li>
 <li><a href="docs/NatCap_marineHelperTools.zip" target="_blank"><b>Marine InVEST Helper Tools</b></a> - A GIS toolbox for pre- and post-processing data to be used with InVEST models (<i>requires ArcGIS 10.x license</i>)</li>
 <li><a href="http://ncp-yamato.stanford.edu/natcapforums/categories/experimental-software-tools" target="_blank"><b>Experimental Software Tools</b></a> - A discussion thread where NatCap staff and members of the broader community share details about new helper tools</li>
 </ol>
 <p></p>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
-<b>Q: Where is the <u>best</u> place to find data?</b><br>
-<i>A: We have compiled a list of some global and regional MSP databases (see above).  Environmental NGOs and local or regional government agencies often have data available upon request, if they don’t have an existing data portal.  Be clear and transparent with partners about data needs and how your team intends to use this information.  Some partners and collaborators are likely to have a network of potential data sources.</i><br>
+<b>Q: Where can I find MSP data?</b><br>
+<i>A: We have compiled a list of global and regional MSP databases (see above).  Environmental NGOs and local government agencies often have data available upon request or through a data sharing agreenment.  Some partners and collaborators may also have a network of data sources.  When requesting data, be clear and transparent about how your team intends to use this information.</i><br>
 <p></p>
-<b>Q: How do I handle lack of data?</b><br>
-<i>A: Lack of data can be a real problem.  However, stakeholders often respond well to qualitative outputs too.  Ultimately, it's important to be clear throughout the process as to where there was uncertainty or low confidence due to paucity of information.</i>
+<b>Q: How do I handle data gaps?</b><br>
+<i>A: Lack of data can present a serious challenge.  A GIS analyst may be able to compile different sources of information and piece them together as a continuous data set.  Also, keep in mind that stakeholders often respond well to qualitative outputs too.  Ultimately, it's important to be clear throughout the process as to where there is uncertainty or lack of confidence due to paucity of information.</i>
 <p></p>
 <b>Q: How much is <u>enough</u> data?</b><br>
-<i>A: Revisit the project objectives and methodologies outlined during the scoping process.  Start with just enough data to do preliminary analyses (e.g., run a selected tool).  It is often easier to add and refine data as you go rather than waiting for "final" data.</i>
+<i>A: Revisit the project objectives and methodologies outlined during the scoping process.  Start with just enough data to do preliminary analysis (e.g., run a selected tool).  It is often easier to add and refine data as you go rather than waiting for "final" data.</i>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
@@ -238,7 +238,7 @@ Pre-processing spatial and tabular data is a challenging but necessary step befo
 Use the expand [+] button to learn more about this data compilation step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
 <h4>Barbados</h4>
-Data coordination between multiple partners was essential in Barbados.  We used Google Drive to keep an updated list of the data we already had, the data we could readily access if needed, and the data we hoped to acquire.  This online collaboration system helped us track data needs and acquisition (e.g., source, spatial coverage, resolution, etc.) which is difficult to accomplish with a remote team based in Barabados and the USA.  Preliminary results from some InVEST models helped identify additional data needs and demonstrate for partners how data would be used.
+Online data management was essential in Barbados.  Data management can be challenging when coordinating among a remote team based in different locations.  We used Google Drive to store and track data we already had, data we could readily access if needed, and data we hoped to acquire.  This online system helped our partners track project information, including data sources, spatial resolution, and map units.  Preliminary results from InVEST models identified additional data needs and demonstrated for partners how data would be used.
 <p></p>
 <h4>Mozambique</h4>
 Coming soon
