--- a/iterate.html
+++ b/iterate.html
@@ -22,9 +22,9 @@
 <body>
 <h1>Iterate</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-Iteration can occur within each step, and over the entire process.  For example, <b><a href="scope.html">Scoping</a></b> (step 1) involves defining problem definition and identification of key partnerships and stakeholders, who often bring to the table additional insights, issues, and capacities that can be intergated throughout.  The <b><a href="data.html">Data</a></b> and <b><a href="analyze.html">Analyze</a></b> steps often involve iteration through which results from intial, coarse analyses illustrate critical gaps.  At times, communication of results to new audiences will help identify new decision questions that require new data collection, scenarios, analysis, or synthesis.
+Iteration can occur within each step, and over the entire process.  For example, <b><a href="scope.html">Scoping</a></b> (step 1) involves defining problem definition and identification of key partnerships and stakeholders, who often bring to the table additional insights, issues, and capacities that can be integrated throughout.  The <b><a href="data.html">Data</a></b> and <b><a href="analyze.html">Analyze</a></b> steps often involve iteration through which results from intial, coarse analyses illustrate critical gaps.  At times, communication of results to new audiences will help identify new decision questions that require new data collection, scenarios, analysis, or synthesis.
 <p></p>
-The following is a diagram of the approach for ecosystem service assessment proposed by Rosenthal and colleagues (2014).  Here we have adapted it for marine spatial planning. Iteration is critical within each step of the process (orange inset) and between steps (inset again) for the entire process to be effective.  We find that revisiting steps 1-3 after <b><a href="synthesize.html">Synthesize</a></b> (step 5) are the most common pathways for iteration; however, other trajectories do occur.
+The following is a diagram of the approach for ecosystem service assessment proposed by Rosenthal and colleagues (2014).  Iteration is critical within each step of the process (orange inset) and between steps (inset again) for the entire process to be effective.  We find that revisiting steps 1-3 after <b><a href="synthesize.html">Synthesize</a></b> (step 5) are the most common pathways for iteration; however, other trajectories do occur.
 <p></p>
 <img src="img/approach_wInset.png" usemap="#wInset"><br>
 <map name="wInset">
@@ -38,22 +38,22 @@ The following is a diagram of the approach for ecosystem service assessment prop
 <a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
-<li>Engage stakeholders and local experts (e.g., scientists, NGOs, member of civil society) to share preliminary results</li>
-<li>Revisit previous steps in the approach with expert feedback to refine and improve project information</li>
+<li>Engage stakeholders and local experts to share preliminary results and exchange knowledge</li>
+<li>Use stakeholder and expert feedback to revisit steps in the approach and refine project information</li>
 </ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
 <ul>
-<li>Iteration can offer valuable information even when you only have preliminary data and scenarios</li>
-<li>Take advantage of this step early in the project to identify additional data needs, produce initial results to show to local contacts, and get comfortable with the mechanics of this approach and applying MSP decision-support tools</li>
+<li>Through an iterative process, refine project information and then apply this knowledge within each step of the approach</li>
+<li>Use iteration early on to identify additional data needs, produce initial results to show to local contacts, and get more comfortable with the mechanics of applying scenario development and ecosystem service analysis tools</li>
 </ul>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
-<b>Q: How do I know when to move on versus returning to a previous step?</b><br>
-<i>A: Knowing how to navigate through the different steps of our approach takes practice.  Returning to previous steps with new information is rarely a waste of time.  It usually serves to solidify your goals for the step and helps your team moving forward.</i><br>
+<b>Q: How do I know when to move on to the next step?</b><br>
+<i>A: Navigating through the different steps of this approach takes practice.  With that said, returning to previous steps with new information is rarely a waste of time.  At the very least, it will solidify your goals for each step and help your team move forward.</i><br>
 <p></p>
-<b>Q: How many iterations are typical for an MSP project?</b><br>
-<i>A: The number of iterations (times through the 6 steps) varies by project.  Some NatCap use-cases (e.g., Barbados) were conducted under tight timelines.  Others had years to develop and we learned as we went along.  Explore our use-case summaries at the bottom of each page to learn how many times we visited each step and which factors slowed down or sped up this process.</i>
+<b>Q: How many iterations (times through the 6 steps) are typical for an MSP project?</b><br>
+<i>A: The number of iterations for a project depends on your timeline and other factors (funding, capacity, etc.).  Some of our use-cases (e.g., Barbados) were conducted under tight project windows that only allowed for a few iterations.  For other projects, like Belize and Vancouver Island, we had several years to work through this approach, learn from our mistakes, and revisit previous steps with better information and experience.</i>
 <p></p>
 <a class="float right" href="#">top</a>
 <p></p><br>
