--- a/scenarios.html
+++ b/scenarios.html
@@ -139,7 +139,7 @@ window.onload = function (evt) {
 <body>
 <h1>Step 3: Scenarios (Alternative Futures)</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-Scenarios are plausible representations of alternative futures, useful for examining how action taken today may play out in the future. They are used to demonstrate how ecosystem services can change under various coastal management and restoration alternatives and indicate the synergies and trade-offs among options. With many changes to consider when policies or mechanisms are designed, scenarios provide an important tool for planning and designing interventions.
+Scenarios are plausible representations of the future.  Developing a set of alternative scenarios can be useful for examining how actions taken today may play out in the future. In the context of MSP, scenarios can be used to demonstrate how ecosystem services will change under different management and restoration alternatives and indicate the synergies and trade-offs among options.  With many changes to consider when policies or mechanisms are designed, scenarios provide an important tool for planning and designing interventions.
 <p></p>
 <img src="img/approach_Step3.png" usemap="#step3"><br>
 <map name="step3">
@@ -152,21 +152,21 @@ Scenarios are plausible representations of alternative futures, useful for exami
 <a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
-<li>Use scenario tools and stakeholder engagement to draft storylines describing alternative pathways to some future date</li>
-<li>Map these alternative pathways (future scenarios) based on plausible changes to human uses and ecosystems over time</li>
-<li>Finalize at least two distinct future scenarios to compare and assess future outcomes (<b><a href="analyze.html">Analyze</a></b> step)</li>
+<li>As part of a stakeholder-driven process, draft scenario storylines describing alternative pathways to some future date</li>
+<li>Use scenario tools and stakeholder input to map differences in human use and marine management across these scenarios</li>
+<li>Develop and finalize at least two future scenarios to compare and assess future outcomes (<b><a href="analyze.html">Analyze</a></b> step)</li>
 </ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
 <ul>
-<li>Scenarios reflected in InVEST are best expressed spatially (maps showing location of functional habitats/ecosystems)</li>
+<li>Scenarios reflected in InVEST are best expressed spatially (maps showing location of ocean uses, ecosystems, marine managed areas, etc.)</li>
 <li>Alternative scenarios should be <b>distinct</b> (see pg 5 of our <a href="http://naturalcapitalproject.org/pubs/ScenariosPrimer.pdf" target="_blank"><b>Primer</b></a> for a complete list of effective scenario characteristics)</li>
 <li>Explore our compilation of use-cases (below) to help find a scenario development tool that matches your project needs</li>
-<li>Recognize that it is a difficult and time consuming to incorporate a diverse range of stakeholder visions and values</li>
+<li>Recognize that it is a time consuming process to adequately incorporate a diverse range of stakeholder visions and values</li>
 </ul>
 <a name="conflicts"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/cc_sm.png" align="left"><h2>&nbsp;&nbsp;Conflicts & Compatibilities</h2>
-When many competing ocean uses exist in an area, it may be a useful to identify conflicts and compatibilities between sectors.  We include this exercise in the "Scenarios" step because alternative futures (scenarios) may result in different conflicts and varying compatibilities among uses.  Click on the image below to download an Excel template to use on your own.
+When multiple human activities are competing in space, it may be a useful to identify conflicts and compatibilities among ocean uses and across sectors.  We include this exercise in the "Scenarios" step because alternative scenarios may result in different conflicts and varying compatibilities among uses.  Click on the image below to download an Excel template and modify for your own use.
 <p></p>
 <ul id="folio_scroller">
 <li><span>Indication of compatibility between sectors<br>from WWF's <a href="http://wwf.panda.org/what_we_do/where_we_work/baltic/threats/newmap/ " target="_blank">Future Trends in the Baltic Sea</a> report</span><a href="docs/conflicts_compatibilities.xlsx" target="_blank"><img alt="" src="img/conflict_compat.png" /></a></li>
@@ -174,7 +174,7 @@ When many competing ocean uses exist in an area, it may be a useful to identify 
 <p></p><br>
 <a name="tools"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;Scenario Development Tools and Use-Cases</h2>
-Below we list eight scenario development tools.  Click on the sub-bullets to learn more about how they were applied for MSP use-cases.
+Below we list some popular scenario development tools.  Click on the sub-bullets to learn more about how they were applied in MSP use-cases.
 <p></p>
 <ol>
 <li><a href="inseam.html"><b>InSEAM</b></a> is a free online map annotation tool enabling multiple users to draw features on a base map.  These drawings and annotations can be organized and downloaded as digital layers to faciliate the scenario development process.
@@ -195,14 +195,14 @@ St. Kitts and Nevis</a> - Marxan with Zones generated a series of scenario-analy
 </ol>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
-<b>Q: What is the best way to create scenarios?</b><br>
-<i>A: Scenario development is dependent on location, partners, and objectives.  Refer to our list of scenarios development tools for ways to get started.  Our Belize use-case (described below) used a habitat risk assessment tool combined with stakeholder engagement to draft and refine three alternative future scenarios.</i><br>
+<b>Q: How do I get started developing scenarios for MSP?</b><br>
+<i>A: Scenario development is dependent on location, partners, and objectives.  Refer to our list of scenarios development tools for ways to get started.  For example, our Belize use-case (described below) used a habitat risk assessment tool combined with stakeholder engagement to draft and refine three alternative future scenarios.</i><br>
 <p></p>
 <b>Q: Can Marxan with Zones be used with InVEST models?</b><br>
-<i>A: It is certainly possible.  Marxan produces zoning configurations that meet multiple planning objectives.  Marine InVEST can take these zoning maps (scenarios of coastal-marine human uses) as inputs and assess outcomes for people based on changes to ecosystem structure and function.  NatCap has used various scenario tools to produce inputs for InVEST.  For example, the <a href="http://www.warrenpinnacle.com/prof/SLAMM/" target="_blank"><b>SLAMM model</b></a> (Sea Level Affecting Marshes Model) was applied in the US Gulf of Mexico to produce future maps of salt marshes under different sea level rise scenarios for 2050 and 2100.</i><br>
+<i>A: Marxan produces zoning configurations for the purpose of achieving multiple planning objectives.  InVEST can use zoning maps produce by Marxan (e.g., optimal locations for different sectoral uses) to assess outcomes for people based on the future changes to ecosystem structure and function.  NatCap has used various scenario tools as a means to create inputs for InVEST models.  For example, the <a href="http://www.warrenpinnacle.com/prof/SLAMM/" target="_blank"><b>SLAMM model</b></a> (Sea Level Affecting Marshes Model) was applied in the US Gulf of Mexico to produce maps showing where salt marshes migrate under different sea level rise scenarios for the year 2100.</i><br>
 <p><p>
-<b>Q: Should scenarios be final?</b><br>
-<i>A: Not necessarily.  After preliminary analyses, scenarios can be iteratively refined to get at alternative outcomes that will help answer your research questions.  Throughout the process, continue consulting stakeholders and local experts to ensure that your scenarios are plausible and will help your team produce information that leads to more informed decisions.</i><br>
+<b>Q: When are my scenarios final?</b><br>
+<i>A: After preliminary analyses, scenarios can be iteratively refined to better reflect plausible alternative futures.  Throughout the scenario development process, continue consulting stakeholders and local experts to ensure that your scenarios are plausible and will help your team produce information that can answer your specific research questions.</i><br>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
@@ -218,15 +218,15 @@ St. Kitts and Nevis</a> - Marxan with Zones generated a series of scenario-analy
 Use the expand [+] button to learn more about this scenario design step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
 <h4>New England</h4>
-During meetings with various marine planning groups working in New England area, it became clear that the word "scenario" was not the preferred terminology to describe current and anticipated ocean uses.  NatCap continues work in the region to help provide decision makers with scientifically valid information to use for broader marine planning efforts.  See our <a href="http://www.naturalcapitalproject.org/where/newengland.html" target="_blank"><b>New England</b></a> page for more details.
+During meetings with stakeholders and agencies working in the New England area, it became clear that the word "scenario" was not the preferred terminology to describe future ocean uses.  NatCap continues work in the region to help provide decision makers with scientifically valid information to use for broader marine planning efforts.  See our <a href="http://www.naturalcapitalproject.org/where/newengland.html" target="_blank"><b>New England</b></a> use-case for more details.
 <p></p>
 <h4>Belize</h4>
-<p>Scenarios reflecting three visions for the future of Belize in 2025 were developed through a succession of stakeholder meetings and workshops.  The scenarios are based on maps of current distribution of ocean and coastal activities, existing and pending goverment plans, and stakeholders' values and preferences.  The following set of rotating images describes this stakeholder-driven process representing three alternative configurations (location and extent) of human activities.</p><br><br>
+<p>Scenarios reflecting three plausible futures for Belize in the year 2025 were developed through a succession of stakeholder meetings and workshops.  These alternative scenarios are based on maps of the current distribution of ocean and coastal activities, existing and pending goverment plans, and stakeholders' values and preferences.  The following set of rotating images describes this stakeholder-driven process where our partner, CZMAI, mapped three zoning configurations describing the location and extent of future human uses.</p><br><br>
 <ul id="folio_scroller">
 <li><span>Maps of current human activities in the coastal zone were compiled by our partner, CZMAI</span><img alt="" src="img/scenarios_bz_folio_1.png" /></a></li>
 <li><span>Two rounds of stakeholder consultations were held throughout the 9 coastal planning regions</span><img alt="" src="img/scenarios_bz_folio_2.png" /></a></li>
-<li><span>Early scenario storylines and InVEST outputs were presented at two workshops held in Belize City. Representatives from government, academia, environmental NGOs and civil society reviewed these preliminary results and suggested improvements.</span><img alt="" src="img/scenarios_bz_folio_3.png" /></a></li>
-<li><span>Final scenario descriptions and maps were compiled and used for modeling with InVEST</span><img alt="" src="img/scenarios_bz_folio_4.png" /></a></li>
+<li><span>Preliminary scenario storylines and InVEST outputs were presented at two workshops held in Belize City. Representatives from government, academia, environmental NGOs and civil society reviewed these early results and suggested improvements.</span><img alt="" src="img/scenarios_bz_folio_3.png" /></a></li>
+<li><span>Final scenario descriptions and maps were used to assess future outcomes with InVEST</span><img alt="" src="img/scenarios_bz_folio_4.png" /></a></li>
 </ul> 
 <p></p><br><br>
 </body>
