--- a/scope.html
+++ b/scope.html
@@ -139,7 +139,7 @@ window.onload = function (evt) {
 <body>
 <h1>Step 1: Scope</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-Scoping (or framing) to link to the decisions and decision-makers of interest is essential for framing appropriate scientific questions, improving the quality of analytical outputs, and increasing the likelihood that results are salient and accessible to stakeholders and policymakers. It can also create the conditions that enable success by clarifying the policy question and ecosystem services of interest, identifying local leaders and champions, and identifying whether a policy window has opened up or could open as the result of the research.
+Scoping is essential for framing appropriate scientific questions, improving the quality of analytical outputs, and increasing the likelihood that results are salient and accessible to stakeholders and policymakers. It can also create the conditions that enable success by clarifying the policy question and ecosystem services of interest, identifying local leaders and champions, and determining whether a policy window has opened up or could open as the result of the research.
 <p></p>
 <img src="img/approach_Step1.png" usemap="#step1"><br>
 <map name="step1">
@@ -152,10 +152,10 @@ Scoping (or framing) to link to the decisions and decision-makers of interest is
 <a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2><p></p>
 <ul>
-<li>Established partnerships with clear roles and responsibilities for each individual or organization</li>
 <li>Clear understanding of the scientific or policy questions to be answered</li>
-<li>Work plan, including expected methodology and a feasible timeline</li>
+<li>Project team with clear roles and responsibilities</li>
 <li>Assessment and synthesis of relevant literature (e.g., literature review)</li> 
+<li>Work plan, including expected methodology and timeline</li>
 <li>Preliminary assessment of available and needed data (e.g., gap analysis)</li>
 </ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
@@ -165,10 +165,10 @@ This step serves to link the decisions, decision-makers, and scientific support 
 <li>Setting a work plan</li>
 <li>Identifying key decision questions</li>
 <li>Selecting methods and tools for analysis</li>
-<li>Engaging stakeholders to exchange knowledge</li>
+<li>Establishing a process to engage stakeholders and exchange knowledge</li>
 <li>Developing a rapport and genuine respect between partners</li>
-<li>Ensuring plans are feasible given timelines and resources</li>
-<li>Identifying essential expertise (e.g., planner, project manager, GIS tech) and which phases these skills are required</li>
+<li>Ensuring plans are feasible given timelines and available resources</li>
+<li>Identifying essential expertise (e.g., planner, project manager, GIS tech) and for which phases these skills are required</li>
 <p></p>
 <a name="questions"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/scopeQ_sm.png" align="left"><h2>&nbsp;&nbsp;Sample MSP Scoping Questions</h2><p></p>
@@ -181,11 +181,11 @@ This step serves to link the decisions, decision-makers, and scientific support 
 </ul>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
-<b>Q: Why is scoping important?  Is it okay to start scoping later in the process as opposed to from the beginning?</b><br>
-<i>A: Early scoping saves time down the road.  By clearly outlining project objectives, scoping focuses efforts on the most important questions and ensures that the planning process will yield the best and highest impact results possible.  Working with stakeholders and decision-makers from the beginning can save time (both yours and theirs).  As scientists we have found that issues we thought mattered, don't always matter to local people. For example, only sometimes do they want valuation.  Also, sometimes the ecosystem and economic measures we used in one location were irrelevant to decision-making in another.</i><br>
+<b>Q: Why is scoping important?  Is it okay to start scoping later in the process?</b><br>
+<i>A: Early scoping saves time down the road.  By clearly outlining project objectives, scoping focuses efforts on key questions and ensures that the planning process will yield the high impact results.  Working with stakeholders and decision-makers from the beginning can save time (both yours and theirs).  During this scoping step, we have found that issues we thought mattered, don't always matter to local people. For example, only sometimes do they want to see valuation.  Also, sometimes the ecosystem and economic measures we used in one location were not relevant to a decision-making in another.</i><br>
 <p></p>
 <b>Q: How much scoping is <u>enough</u>?</b><br>
-<i>A: Scoping should match the scale of the project.  Scoping can start with a two-page description of work, but may end up as a months-long process (see our Barbados example).  Remember that scoping happens in stages and is an iterative process.  Data limitations, scenario development, or the synthesis from a first round of results, may require additional literature review, new partners, or the need for refined questions.</i><br>
+<i>A: Scoping should match the scale of the project.  Scoping can start with a brief description of work (e.g., report), but may end up being a 2-3 month process (see our Barbados example).  Remember that scoping happens in stages and is typically part of an iterative process.  Data limitations, combined with the need for further scenario development and synthesis of initial results, may require additional literature review, new partners, or the need for refined questions.</i><br>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
@@ -206,7 +206,7 @@ This step serves to link the decisions, decision-makers, and scientific support 
 Use the expand [+] button to learn more about this scoping step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
 <h4>Barbados</h4>
-To aid in a coastal management plan for Barbados, NatCap worked with key organizational partners to create a formal literature review and gap analysis for review by the Inter-American Development Bank (IDB).  The report outlined the provisioning, regulating, and cultural ecosystem services of interest and identified threats to these services.  The project team then collected, reviewed, and synthesized available literature and spatial data.  In addition to this synthesis, preliminary runs of select InVEST models were used to identify data gaps.  The literature review and data gap assessment not only organized key information, but also served as a method to gain consensus about the most important ecosystem services and the steps needed to complete a marine spatial plan.
+To aid in a coastal management plan for Barbados, NatCap worked with key organizational partners to create a formal literature review and gap analysis.  The report outlined the provisioning, regulating, and cultural ecosystem services of interest and identified threats to these services.  The project team then collected, reviewed, and synthesized available literature and spatial data.  In addition to this synthesis, preliminary runs of select InVEST models were used to identify data gaps.  The literature review and data gap assessment not only organized key information, but also served as a method to gain consensus about priority ecosystem services in Barbados and the steps needed to complete a marine spatial plan.
 <p></p>
 <h4>California</h4>
 Coming soon
