--- a/synthesize.html
+++ b/synthesize.html
@@ -139,7 +139,7 @@ window.onload = function (evt) {
 <body>
 <h1>Step 5: Synthesize</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-Results from tools used in the previous step are often not in a usable format. Synthesizing decision-support tool outputs allows stakeholders to visualize and compare multiple ecosystem services in space and identify synergies (or bundles) and trade-offs. This step often involves substantial “post-processing” of model outputs. Examples of post-processing include converting outputs to local monetary units, normalizing outputs across services, and producing clear visualizations of spatial outputs that inform framing questions about coastal management and restoration.
+Outputs produced by decision-support tools are not always in a format for immediate use. The "Synthesize" step serves to make sense of raw model outputs so that the most pertinent information can be included in the decision-making process.  Synthesis helps visualize and compare different ecosystem service outcomes in space by highlighting synergies and trade-offs.  This step typically requires substantial "post-processing" of model outputs.  Examples of post-processing include normalizing outputs across multiple ecosystem services or objectives, conversion to local monetary units, or producing maps showing percent change from an established baseline (e.g., current scenario).
 <p></p>
 <img src="img/approach_Step5.png" usemap="#step5"><br>
 <map name="step5">
@@ -152,44 +152,47 @@ Results from tools used in the previous step are often not in a usable format. S
 <a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
-<li>Synthesize outputs from the <b><a href="analyze.html">Analyze</a></b> step to compare ecosystem service delivery under each scenario</li>
-<li>Summarize project information to be included in the communicate and apply phase (<b><a href="communicate.html">Communicate</a></b> step)</li> 
+<li>Refine raw outputs produced during the <b><a href="analyze.html">Analyze</a></b> step</li>
+<li>Identify key metrics and information to be included in the communicate and apply phase (<b><a href="communicate.html">Communicate</a></b> step)</li> 
 </ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
 <ul>
-<li>Maps, charts, table and other synthesis information should be <b>clear and easy to understand</b></li>
-<li><b>Avoid jargon</b> and including superfluous information that will confuse your audience</li>
-<li>Use metrics and visuals that have been determined to resonate with stakeholders and policy-/decision-makers</b></li>
+<li>Synthesis products such as maps, charts and figures should be clear and easy to interpret</li>
+<li>Avoid using jargon, complex terminology or including superfluous information that will confuse your audience</li>
+<li>Use simple metrics and visuals that make sense and seem to resonate with decision-makers</b></li>
 <li>Ask a colleague or friend (who is not familiar with your project) to review synthesis products and offer feedback
-<li>Visit our <a href="gallery.html"><b>Gallery</b></a> to explore examples of design techniques NatCap and partners have used to translate science information into effective visuals</li>
+<li>Visit our <a href="gallery.html"><b>Gallery</b></a> to see examples of MSP visualization techniques</li>
 </ul>
 <p></p>
 <a name="tools"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;Helper Tools</h2>
 <img src="img/off_ramp.png"><br>
-Synthesizing spatial outputs from decision-support tools can be challenging.  NatCap has created helper tools (or "off-ramps") to enable InVEST users to quickly explore results, perform basic post-processing, and assess outcomes without the need for a desktop GIS.  The following are links to examples of InVEST helper tools: 
+Synthesizing outputs from decision-support tools can be challenging.  NatCap has created helper tools (or "off-ramps") that enable InVEST users to quickly explore outputs and perform basic post-processing.  The following are links to examples of InVEST helper tools: 
 <ol>
-<li><a href="http://vulpes.sefs.uw.edu/ttapp/cv-dash.php" target="_blank"><b>InVIEW</b></a> is a web app that automates common synthesis and visualization tasks that may be necessary after running InVEST. InVIEW displays the results of your latest model run in a web browser.  The tool allows InVEST users to easily explore and extract meaning from raw results without the need for a desktop GIS.  With InVIEW, users can:
+<li><a href="http://vulpes.sefs.uw.edu/ttapp/cv-dash.php" target="_blank"><b>InVIEW</b></a> is a web app that automates common synthesis and visualization tasks that may be necessary after running InVEST. InVIEW displays the results of your latest model run in a web browser.  The tool allows InVEST users to easily explore and extract meaning from raw outputs without requiring a desktop GIS.  With InVIEW, users can:
 <br>&#8226; &nbsp;View InVEST outputs on a fully interactive, Google Earth-style, map
 <br>&#8226; &nbsp;Explore spatial patterns (e.g., ecosystem service hotspots)
 <br>&#8226; &nbsp;Compare scenarios and highlight changes over time
 <br>&#8226; &nbsp;Quickly diagnose issues and refine InVEST model inputs</li>
-<li><a href="http://ncp-dev.stanford.edu/~dataportal/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST 3.1.0 User's Guide</b></a> - Every chapter includes a "Interpreting Results" section that defines intermediate and final outputs of each model</li>
-<li><a href="http://tinyurl.com/cctd-belize" target="_blank"><b>Identifying Opportunities for Climate-Compatible Tourism Development in Belize</b></a><br>This online analytics tool enables users to summarize results from the <a href="http://www.naturalcapitalproject.org/models/coastal_vulnerability.html" target="_blank">InVEST coastal vulnerability model</a> through a simple website. Model outputs have been linked to 2010 population census and tourism expenditure data and then visualized as maps and graphs.</li> 
+<li><a href="http://ncp-dev.stanford.edu/~dataportal/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST 3.1.0 User's Guide</b></a> - Each chapter includes an "Interpreting Results" section that defines intermediate and final outputs of each model</li>
+<li><a href="http://tinyurl.com/cctd-belize" target="_blank"><b>Identifying Opportunities for Climate-Compatible Tourism Development in Belize</b></a><br>This online analytics tool enables users to summarize results from the <a href="http://www.naturalcapitalproject.org/models/coastal_vulnerability.html" target="_blank">InVEST coastal vulnerability model</a> through a simple website. Model outputs are linked to 2010 population census and tourism expenditure data and then visualized as maps and graphs.</li> 
 <li><a href="docs/NatCap_marineHelperTools.zip" target="_blank"><b>Marine InVEST Helper Tools</b></a> - A GIS toolbox for pre- and post-processing data to be used with InVEST models (<i>requires ArcGIS 10.x license</i>)</li>
 <li>Visit our <a href="http://ncp-yamato.stanford.edu/natcapforums/categories/experimental-software-tools" target="_blank"><b>Experimental Software Tools</b></a> discussion thread for synthesis helper tools that are currently under development</li>
 </ol>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
 <b>Q: Is it possible to weigh options and compare tradeoffs if results are <u>not</u> in the same units?</b><br>
-<i>A: Yes, it is possible.  We make tradeoffs all the time where we know the cost of something and a physical measure of what we get for that cost.  Try to synthesize results clearly in order to convey to your audience what is being gained or lost.  Quantify it ecologically and economically (if possible) and spell out what can be gained through some management action.  After presenting this information (<a href="communicate.html"><b>Communicate</b></a> step) let the stakeholders and decision-makers decide.  Monetizing outputs for the sake of producing results in a common currency often results in less informed decisions.</i><br>
+<i>A: We make tradeoffs all the time where we know the cost of something and a physical measure of what we get for that cost.  First, try to synthesize results in a way that conveys to your audience what is being gained and/or lost.  Quantify it ecologically (biophysical units) and economically (if possible) and spell out what can be gained through some management or policy action.  After presenting this information (<a href="communicate.html"><b>Communicate</b></a> step) let the stakeholders and decision-makers decide.  Monetizing outputs solely for the sake of producing results in a common currency may actually result in less informed decisions.</i><br>
 <p></p>
-<b>Q: How are tradeoffs among ecosystem services synthesized?</b><br>
-<i>A: Tradeoffs should be synthesized with the project objectives and audience in mind.  When multiple services can be represented using a common unit (e.g., $, number of jobs, etc.), these values may be summarized across a scenario.  In cases where results have different units (e.g., hectares of habitat, pounds of fish, number of visitors, etc.) something as simple as proportional arrows can be used to represent how services increase or decrease under alternative scenarios.  See our <a href="gallery.html"><b>Gallery</b></a> for synthesis ideas.</i><br>
+<b>Q: Do decision-makers always want ecosystem service valuation?</b><br>
+<i>A: No.  It's not always about the money.  Other metrics about livelihoods (e.g., number of jobs created) and ecological outcomes can be just as valuable to decision-makers.</i><br>
 <p></p>
-<b>Q: What is the <u>best</u> synthesis tool for MSP?</b><br>
-<i>A: The best way to synthesize results is to use a method or process in which you are most comfortable.  Members of NatCap have found it helpful to synthesize InVEST results using a combination of GIS (e.g., ArcGIS, QGIS, etc.) and graphic design software like Adobe Illustrator/ Photoshop, GIMP, or InkScape.  However, industry favorites like Microsoft Excel and open-source packages like OpenOffice, R, or Python can also serve as effective synthesis tools.  Bottom line: there are no rules or restrictions here - be creative!</i><br>
+<b>Q: How do I synthesize tradeoffs among ecosystem services?</b><br>
+<i>A: Tradeoffs should be synthesized with your project objectives and audience in mind.  When multiple services can be represented using a common unit or currency (e.g., $, number of jobs, etc.), this unit may be summarized across scenarios.  In cases where outputs have different units (e.g., hectares of habitat, pounds of fish, number of visitors, etc.), something as simple as proportional arrows can be used to represent increase or decrease across scenarios and services.  See our <a href="gallery.html"><b>Gallery</b></a> for some synthesis ideas.</i><br>
+<p></p>
+<b>Q: Which synthesis tool(s) should I use for MSP?</b><br>
+<i>A: Try synthesizing results using methods or tools that are familiar and available to your team.  Members of NatCap have found it helpful to synthesize InVEST results using a combination of GIS (ArcGIS or QGIS) and design software like Adobe Illustrator or Microsoft PowerPoint.  Open-source software like OpenOffice, R, or Python can also be used to produce synthesis products.  Bottom line: there are no rules or restrictions here - be creative!</i><br>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
@@ -204,20 +207,20 @@ Synthesizing spatial outputs from decision-support tools can be challenging.  Na
 Use the expand [+] button to learn more about this synthesize step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
 <h4>Vancouver Island</h4>
-NatCap is working with the West Coast Aquatic Management Board (WCA), a public-private partnership among government agencies and diverse local stakeholders, in its creation of spatial plans for Barkley and Clayoquot Sounds on the West Coast of Vancouver Island (WCVI).  We iteratively mapped and analyzed ecosystem services across realistic zoning scenarios, which is helping decision makers accommodate varied priorities for using marine resources.  Local zoning maps provided realistic scenarios for coastal populations. For larger-scale planning questions, West Coast Aquatic used outputs from InVEST and other tools to compare a wide range of value metrics across different management scenarios.
+NatCap worked with the West Coast Aquatic Management Board (WCA), a public-private partnership among government agencies and diverse local stakeholders, in its creation of spatial plans for Barkley and Clayoquot Sounds on the west coast of Vancouver Island.  We iteratively mapped and analyzed ecosystem services across realistic zoning scenarios to help decision-makers accommodate varied priorities for using marine resources.  Local zoning maps provided realistic scenarios for coastal populations.  For larger-scale planning questions, WCA used outputs from InVEST and other tools to compare a wide range of value metrics across different management scenarios.
 <p></p><br><br>
 <ul id="folio_scroller">
-<li><span>Visualizing results as simple proportions or directional relationships can be an effective way to synthesize multiple metrics and goals for a marine spatial plan.</span><img alt="" src="img/synthesize_vi_folio_4.png" /></a></li>
-<li><span>Flower diagrams can synthesize a wealth of information, including scenario comparisons<br>(C, S1, S2) and project goals (1-6), but may be too complex for some audiences.</span><img alt="" src="img/synthesize_vi_folio_1.png" /></a></li>
-<li><span>This map shows where proposed clear-cuts impact kayaking routes.  Preservation of pristine recreational views is one of many metrics that our partner, West Coast Aquatic, used to achieve a planning goal of "vibrant communities, recreation and culture".</span><img alt="" src="img/synthesize_vi_folio_3.png" /></a></li>
-<li><span>Spider diagrams allow for the visualization of ecosystem service tradeoffs across scenarios (baseline, industry expansion, conservation).  These plots, however, can be difficult to explain to a non-scientific audience.</span><img alt="" src="img/synthesize_vi_folio_2.png" /></a></li>
+<li><span>Arrow diagrams highlight change across different units and goals within a marine spatial plan.</span><img alt="" src="img/synthesize_vi_folio_4.png" /></a></li>
+<li><span>Flower diagrams can synthesize outcomes across multiple scenarios (C, S1, S2) and project goals (1-6), but may require additional explanation when presented to some audiences.</span><img alt="" src="img/synthesize_vi_folio_1.png" /></a></li>
+<li><span>This map shows where proposed clear-cutting of trees will impact views along kayaking routes.  Preservation of pristine recreational views is one metric that our partner, West Coast Aquatic, included in their planning goal of "vibrant communities, recreation and culture".</span><img alt="" src="img/synthesize_vi_folio_3.png" /></a></li>
+<li><span>Spider plots visualize ES synergies and tradeoffs across scenarios (baseline, industry expansion, conservation), but can be difficult for some audiences to interpret.</span><img alt="" src="img/synthesize_vi_folio_2.png" /></a></li>
 </ul> 
 <p></p><br><br><br>
 <h4>Belize</h4>
-To inform the design of the Integrated Coastal Zone Management Plan for Belize we modeled three ecosystem services and produced biophysical and economic outputs for each service: 1) catch and revenue from spiny lobster, 2) land protected and avoided damages from storms, and 3) visitation and expenditures from tourism.  We modeled the three services for the <i>Current</i>, <i>Conservation</i>, <i>Informed Management</i> and <i>Development</i> scenarios.  We produced national results, for the entire region within the boundaries of the planning process (3 km inland and the territorial sea, (~18,000 km2)) and for each of the nine planning regions. 
+To inform the design of the Integrated Coastal Zone Management Plan for Belize, we modeled three ecosystem services and produced biophysical and economic outputs for each: 1) catch and revenue from spiny lobster, 2) land protected and avoided damages from storms, and 3) visitation and expenditures from tourism.  We assessed outcomes for these three services for the <i>Current</i>, <i>Conservation</i>, <i>Informed Management</i> and <i>Development</i> scenarios.  National results for the entire country and each of the nine planning regions were produced and synthesized.
 <p></p><br><br>
 <ul id="folio_scroller">
-<li><span>We used the <a href="marine_invest.html">InVEST habitat risk assessment model</a> to understand differences in the cumulative risk to coral reefs, mangroves, and seagrass beds under three alternative futures.</span><img alt="" src="img/synthesize_bz_folio_1.png" /></a></li>
+<li><span>The <a href="marine_invest.html">InVEST habitat risk assessment model</a> was used to understand differences in the cumulative risk to coral reefs, mangroves, and seagrass beds under three alternative zoning configurations.</span><img alt="" src="img/synthesize_bz_folio_1.png" /></a></li>
 <li><span>Through its contribution to outdoor recreation, the environment provides services to people.  We used the <a href="marine_invest.html">InVEST recreation & tourism model</a> to map the spread of recreation by tourists.</span><img alt="" src="img/synthesize_bz_folio_2.png" /></a></li>
 <li><span>A spiny lobster model for Belize was used to explore how ES returns from the fishery would respond to changes in lobster habitat (seagrass, mangrove, coral reef) or fishing pressure.</span><img alt="" src="img/synthesize_bz_folio_3.png" /></a></li>
 <li><span>We used the <a href="marine_invest.html">InVEST coastal protection model</a> to quantify the protective benefits that natural habitats provide against erosion and inundation in nearshore environments.</span><img alt="" src="img/synthesize_bz_folio_4.png" /></a></li>
