--- a/welcome.html
+++ b/welcome.html
@@ -38,20 +38,20 @@ This website was designed to help answer <b>frequently asked questions</b> about
 <h2>What are MSP and ecosystem services?</h2>
 <b>Marine spatial planning</b> (MSP) is a tool for <b>minimizing conflicts among users and reducing impacts on ecosystems</b>.  Increasing demands on ocean space for diverse uses, including tourism, recreation, fishing, shipping, national security, oil and gas exploration and renewable energy (wind and wave), have led to more conflicts among users as well as additional impacts on already stressed ocean ecosystems (Lubchenco and Petes 2010, Douvere 2008, United Nations Environment Programme 2006).
 <p></p>
-For more information about the relationships between <b>impacts &#8596; habitats &#8596; benefits</b>, click on the "Human Uses" tab below to rotate the scrolling image.
+For more information about the relationships between <b>impacts &#8596; habitats &#8596; benefits</b>, click on the "Human Uses" tab below to rotate the set of images.
 <p></p><br><br>
 <ul id="folio_scroller">
 <li><span>This diagram depicts potential conflicts among human use activities in a tropical system like Belize.  Information contained within this website can also be applied to MSP in temperate and arctic systems. <i>Images courtesy of the </b><a href="http://www.healthyreefs.org" target="_blank">Healthy Reefs Initiative</a></i></span><img alt="" src="img/folio_4.png" /></a></li>
 <li><span>Human use activities provide important economic and social benefits to people.</span><img alt="" src="img/folio_1.png" /></a></li>
-<li><span>MSP aims to maximize economic opportunities while minimizing environmental degradation.  Spatial planning that considers a range of stakeholder values has the potential to reduce ocean conflicts and maintain these important benefits provided by ecosystems.</span><img alt="" src="img/folio_3.png" /></a></li>
+<li><span>MSP aims to maximize economic opportunities while minimizing environmental degradation.  Spatial planning that considers a range of stakeholder values has the potential to reduce ocean conflicts and maintain a suite of benefits provided by ecosystems.</span><img alt="" src="img/folio_3.png" /></a></li>
 <li><span>Healthy coastal-marine ecosystems such as mangroves, corals and seagrasses provide important benefits (or "ecosystem services") to people.  Poor ocean planning, however, can pose serious risk to these habitats, resulting in less services.</span><img alt="" src="img/folio_2.png" /></a></li>
 </ul> 
 <p></p><br><br>
-In this guide we highlight an <b>ecosystem service</b> (ES) <b>approach</b> (<a href="docs/Ruckelshaus_etal_2014_EE.pdf" target="_blank">Ruckelshaus et al. 2013</a>) which we believe can <i><b>aid the MSP process</b></i>.  This means that during the planning process the focus is not just on the ecosystem itself, but the flow of benefits from healthy ecosystems to people (called "ecosystem services").  This connection between environmental health and human benefit is not usually recognized or considered in the marketplace.   MSP and ecosystem services thinking now covers a myriad ideas, issues and dimensions that describe the uncountable ways that people use and depend on nature.  We cannot cover them all here so instead we attempt to narrow the conversation.
+In this guide we highlight an <b>ecosystem service</b> (ES) <b>approach</b> (<a href="docs/Ruckelshaus_etal_2014_EE.pdf" target="_blank">Ruckelshaus et al. 2013</a>) which we believe can <i><b>aid the MSP process</b></i>.  This means that during the planning process the focus is not just on the ecosystem itself, but the flow of benefits from healthy ecosystems to people (called "ecosystem services").  Since this connection between environmental health and human benefit is not typically considered in ocean development and management, we suggest an approach to include ecosystem service information in these decisions.
 <p></p>
 <div class="hr dotted clearfix">&nbsp;</div>
 <h2>Suggested MSP Approach</h2>
-There are several suggested approaches which converge around these common themes (e.g., <a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">Rosenthal et al. 2014</a>) and outline an approach for conducting decision-relevant assessments of ecosystem services.  This website adapts an approach designed by Rosenthal and colleagues at the <a href="contact.html">Natural Capital Project</a> to be used in the context of marine spatial planning.<p></p>
+There are several suggested MSP approaches which converge around these common themes.  This website adapts an approach for conducting decision-relevant assessments of ecosystem services designed by Rosenthal and colleagues at the Natural Capital Project to be used in the context of marine spatial planning (<a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">Rosenthal et al. 2014</a>).<p></p>
 <center>
 <img src="img/approach_noInset.png" usemap="#noInset"><br>
 <map name="noInset">
@@ -63,14 +63,14 @@ There are several suggested approaches which converge around these common themes
   <area shape="circle" coords="736,86,55" href="communicate.html" alt="Communicate">
 </map>
 </center>
-We encourage you to visit the six steps of our suggested approach by clicking the links on the left panel menu or conceptual diagram (above). <b><u>For each step</u></b> we provide the following information:
+We encourage you to explore the six steps of this approach by clicking the menu links in the left panel. <b><u>For each step</u></b> we provide the following information:
 <p></p>
 <center>
 <table>
-<tr><td><img src="img/headers/overview.png" style="vertical-align:top"></td><td><b>Overview</b></td><td>Description of each step </td></tr>
-<tr><td><img src="img/headers/products.png" style="vertical-align:top"></td><td><b>Goals</b></td><td>Intermediate and final products and outcomes from each step</td></tr>
+<tr><td><img src="img/headers/overview.png" style="vertical-align:top"></td><td><b>Overview</b></td><td>Description of the step </td></tr>
+<tr><td><img src="img/headers/products.png" style="vertical-align:top"></td><td><b>Goals</b></td><td>Intermediate and final products or outcomes</td></tr>
 <tr><td><img src="img/headers/tips.png" style="vertical-align:top"></td><td><b>Tips</b></td><td>Helpful advice and lessons learned</td></tr>
-<tr><td><img src="img/headers/databases.png" style="vertical-align:top"></td><td><b>Databases</b></td><td>Relevant sources of spatial data and project information</td></tr>
+<tr><td><img src="img/headers/databases.png" style="vertical-align:top"></td><td><b>Databases</b></td><td>Free sources for MSP-relevant data</td></tr>
 <tr><td><img src="img/headers/tools.png" style="vertical-align:top"></td><td><b>Tools</b></td><td>Decision-support and helper tools</td></tr>
 <tr><td><img src="img/headers/faq.png" style="vertical-align:top"></td><td><b>FAQ</b></td><td>Answers to frequently asked questions</td></tr>
 <tr><td><img src="img/headers/links.png" style="vertical-align:top"></td><td><b>Links</b></td><td>Suggested reading and online links</td></tr>
@@ -80,7 +80,7 @@ We encourage you to visit the six steps of our suggested approach by clicking th
 <p></p>
 <div class="hr dotted clearfix">&nbsp;</div>
 <h2>NatCap MSP Use-Cases</h2>
-Learning about new MSP use-cases can elucidate methods and tools that may be relevant to your own project. The <b>Natural Capital Project (NatCap)</b> has compiled lessons from six MSP use-cases around the world.  At the bottom of each subpage we summarize how each step was accomplished for select use-cases.
+Learning about different MSP use-cases can highlight methods and tools that can be adapted to your own projects. The <a href="contact.html">Natural Capital Project</a> (NatCap) has compiled lessons from six MSP use-cases around the world.  At the bottom of each subpage we summarize how each step was accomplished for select use-cases.
 <p></p>
 <a class="float right" href="#">top</a>
 <p></p><br>
